correct alignment + adjusting color + hover effect

--- a/css/style.css
+++ b/css/style.css
@@ -3,44 +3,47 @@ body {
 }
 
 nav {
-  display: block;
+  position: relative;
   background-color: #333;
   overflow: hidden;
-  height: 70px;
-  width: 100%;
-  padding: 10px;
+  width: 100vw;
 }
 
 nav img {
-  margin-bottom: auto;
-  max-width: 100%;
-  max-height: 100%;
+  position: relative;
+  max-width: 70px;
+  max-height: 70px;
   border-radius: 50%;
+  padding: 5px;
+  padding-left: 20px;
 }
 
 ul {
-  float: right;
-  text-align: center;
+  margin: 0;
   padding-right: 20px;
-  padding-left: 0;
-  margin-top: 0;
-  height: 70px;
-  list-style: none;
+  display: flex;  
+  float: right;
 }
 
 li {
-  float:left;
-  display:block;
-  background:blue;
+  background:rgb(59, 59, 59);
+  list-style-type: none;
+  min-height: 85px;
+  text-align: center;
 }
 
 li a {
-  display: inline-block;
+  display: block;
   min-height: 100%;
   width: 100px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   text-decoration: none;
   color: white;
+  padding: 25px 0;
+}
+
+li a:hover {
+  background-color: rgb(71, 71, 71);
 }
 
 h1{
@@ -48,7 +51,13 @@ h1{
 }
 
 .center {
-  position: absolute;
-  padding-left: 50%;
-  width: 300px;
+  margin: auto;
+  padding: 10px;
+}
+.center h1{
+  text-align: center;
+}
+.center button{
+  margin: auto;
+  display: block;
 }
